2002-10-05  Nanashi-san

	* *.pl: New scripts.  (Commited by Wakaba <w@suika.fam.cx>.)

2002-10-05  Wakaba <w@suika.fam.cx>

	* ChangeLog: New file.